# deformation_transfer

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
src/: CMakeLists.txt  correspondace.h  correspondence.cpp  main.cpp
src/meshlib/: CMakeLists.txt  matrix.hpp  matrix_proxy.hpp  mesh.cpp  mesh.h  solver.cpp  solver.h  spmatrix.hpp
static/: markers.txt
tests/: test_matrix.cpp  test_mesh.cpp  test_show_markers.py  test_solver.cpp  test_spmatrix.cpp
